2018-03-28  Daniel Bates  <dabates@apple.com>

        WebSocket cookie incorrectly stored
        https://bugs.webkit.org/show_bug.cgi?id=184100
        <rdar://problem/37928715>

        Reviewed by Brent Fulgham.

        * http/tests/websocket/tests/hybi/cookie_wsh.py: Added. Downloaded from
        <https://github.com/w3c/pywebsocket/blob/b2e1d11086fdf00b33a0d30c504f227e7d4fa86b/src/example/cookie_wsh.py>.
        (_add_set_cookie):
        (web_socket_do_extra_handshake):
        (web_socket_transfer_data):
        * http/tests/websocket/tests/hybi/websocket-cookie-overwrite-behavior-expected.txt: Added.
        * http/tests/websocket/tests/hybi/websocket-cookie-overwrite-behavior.html: Added.

2018-03-27  Daniel Bates  <dabates@apple.com>

        CSS mask images should be retrieved using potentially CORS-enabled fetch
        https://bugs.webkit.org/show_bug.cgi?id=179983
        <rdar://problem/35678149>

        Reviewed by Brent Fulgham.

        Add a test to ensure we do not fetch a cross-origin CSS mask image that does
        not allow CORS access.

        * http/tests/security/css-mask-image-expected.html: Added.
        * http/tests/security/css-mask-image.html: Added.
        * http/tests/security/resources/black-square.png: Added.
        * http/tests/security/resources/fail-mask.png: Added.
        * media/modern-media-controls/resources/media-controls-loader.js: Disable "Anonymous" mode
        fetching of mask images to allow modern media controls to load mask assets from the filesystem.

2018-03-21  Said Abou-Hallawa  <sabouhallawa@apple.com>

        Disconnect the SVGPathSegList items from their SVGPathElement before rebuilding a new list
        https://bugs.webkit.org/show_bug.cgi?id=183723
        <rdar://problem/38517871>

        Reviewed by Daniel Bates.

        * svg/dom/reuse-pathseg-after-changing-d-expected.txt: Added.
        * svg/dom/reuse-pathseg-after-changing-d.html: Added.

2018-06-07  Brent Fulgham  <bfulgham@apple.com>
