@@ -1,3 +1,12 @@
+2018-06-22  Michael Catanzaro  <mcatanzaro@igalia.com>
+
+        REGRESSION(r230950): [GTK] WebKit::CoordinatedBackingStoreTile::setBackBuffer(): WebKitWebProcess killed by SIGSEGV (ASSERTION FAILED: it != m_tiles.end())
+        https://bugs.webkit.org/show_bug.cgi?id=186206
+
+        Unreviewed, remove crash expectations for crashes introduced by r230950.
+
+        * platform/gtk/TestExpectations:
+
 2018-03-28  Daniel Bates  <dabates@apple.com>
 
         WebSocket cookie incorrectly stored
